# create-rustchain-agent

./: CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/: dependabot.yml
create_rustchain_agent/: __init__.py  __main__.py  templates.py
tests/: test_scaffold.py
